# persistent-postgres-rs

./: Cargo.toml
src/: lib.rs  persistent.rs  postgres_uri.rs
src/error/: mod.rs
src/error/connection/: causes.rs  code.rs  description.rs  docs.rs  mod.rs  solutions.rs
src/error/listener/: causes.rs  code.rs  description.rs  docs.rs  mod.rs  solutions.rs
